Solve problems from Angular

--- a/client-side/src/app/components/login/login.component.html
+++ b/client-side/src/app/components/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="container">
+    <div class="card card-container">
+        <img src="" />
+        <form name="form-signin" (ngSubmit)="f.form.valid && login()" #f="ngForm">
+            <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+                {{errorMessage}}
+            </div>
+            <div class="form-group" [ngClass]="{'has-error': f.submitted && !username.valid}">
+                <label for="username">Username</label>
+                <input type="text" name="username" class="form-control" id="username" [(ngModel)]="user.username" #username="ngModel" required/>
+                <div class="alert alert-danger" *ngIf="f.submitted && !username.valid">
+                    Username required
+                </div>
+            </div>
+            <div class="form-group" [ngClass]="{'has-error': f.submitted && !password.valid}">
+                <label for="password">Pasword</label>
+                <input type="text" name="password" class="form-control" id="password" [(ngModel)]="user.password" #password="ngModel" required/>
+                <div class="alert alert-danger" *ngIf="f.submitted && !password.valid">
+                    Username required
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+        </form>
+        <a href="/register" class="btn btn-link">Register</a>
+    </div>
+</div>
