--- a/client-side/src/app/components/home/home.component.html
+++ b/client-side/src/app/components/home/home.component.html
@@ -1,1 +1,51 @@
-<p>home works!</p>
+<div class="container">
+    <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+        <strong>Error!</strong> {{errorMessage}}
+    </div>
+    <div class="alert alert-success" role="alert" *ngIf="infoMessage">
+        <strong>Success!</strong> {{infoMessage}}
+    </div>
+    <div class="course-container" >
+        <div class="card">
+            <div class="card-header" >
+                <div class="row">
+                    <div class="col col-xs-6">
+                        <h3 class="panel-title"> All Courses</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body" >
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Author</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Publish Date</th>
+                            <th scope="col">Enroll</th>
+                            <th scope="col">Detail</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of courseList; let i=index">
+                            <th scope="row">{{i+1}}</th>
+                            <td>{{item.title}}</td>
+                            <td>{{item.author}}</td>
+                            <td>{{item.category}}</td>
+                            <td>{{item.publishDate | date: "MMM d, y, h:mm:ss" }}</td>
+                            <td>
+                                <button class="btn btn-info" (click)="enroll(item)" >Enroll</button>
+                            </td>
+                            <td>
+                                <button class="btn btn-success" (click)="detail(item)" >Detail</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
