--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
   <div class="navbar-nav mr-auto">
     <li class="nav-item">
-      <a href="/home" class="nav-link">Home</a>
+      <a href="/stock-option-load" class="nav-link">Home</a>
     </li>
   </div>
   <div class="navbar-nav ml-auto" *ngIf="!currentUser">
