--- a/client-side/src/app/components/stockOptionReport/stockOptionReport.component.html
+++ b/client-side/src/app/components/stockOptionReport/stockOptionReport.component.html
@@ -1,36 +1,18 @@
 <div class="container">
-    <header class="jumbotron">
+    <header >
         <h1 class="display-3">
-            <strong>Stock Options</strong>
+            <strong>Report</strong>
         </h1>
     </header>
-    <div class="stock-option-load-container">
-        <div *ngIf="currentFile" class="progress">
-            <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
-                attr.aria-valuenow="{{ progress }}" aria-valuemin="0" aria-valuemax="100"
-                [ngStyle]="{ width: progress + '%' }">
-                {{ progress }}%
-            </div>
-        </div>
-
-        <label class="btn btn-default">
-            <input type="file" (change)="selectFile($event)" />
-        </label>
-
-        <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
-            Upload
-        </button>
-
-        <div class="alert alert-light" role="alert">{{ message }}</div>
-
-        <div class="card">
-            <div class="card-header">List of Files</div>
-            <ul class="list-group list-group-flush" *ngFor="let file of fileInfos | async">
-                <li class="list-group-item">
-                    <a href="{{ file.url }}">{{ file.name }}</a>
-                    <button class="btn btn-success float-right" (click)="process(file)">Process</button>
-                </li>
-            </ul>
-        </div>
+    <div class="stock-option-report-container">
+        <canvas baseChart width="400" height="400"
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            [plugins]="lineChartPlugins">
+        </canvas>
     </div>
 </div>
