--- a/client-side/src/app/components/stockOptionReport/stockOptionReport.component.html
+++ b/client-side/src/app/components/stockOptionReport/stockOptionReport.component.html
@@ -5,7 +5,7 @@
         </h1>
     </header>
     <div class="stock-option-report-container">
-        <canvas baseChart width="400" height="400"
+        <canvas baseChart 
             [datasets]="lineChartData"
             [labels]="lineChartLabels"
             [options]="lineChartOptions"
